--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <html style="-webkit-app-region: drag">
   <head>
     <meta charset="utf-8">
-    <title>electron-vue</title>
+    <title>egg-clipboard</title>
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
       <script>
